localstorage new posts done!

--- a/Week8/bitBlogDrugaGrupa/src/app/App.css
+++ b/Week8/bitBlogDrugaGrupa/src/app/App.css
@@ -35,6 +35,10 @@ footer{
 
 h3 {
   margin: 0 0 10px 0;
-  font-size: 1rem;
+  font-size: 1.5rem;
   font-weight: bold;
+}
+
+.collection a.collection-item {
+  color:black;
 }
