--- a/Week8/bitBlogDrugaGrupa/src/app/partials/loadingSquare/Square.css
+++ b/Week8/bitBlogDrugaGrupa/src/app/partials/loadingSquare/Square.css
@@ -7,7 +7,7 @@
 .sk-cube-grid .sk-cube {
   width: 33%;
   height: 33%;
-  background-color: #ee6e73;
+  background-color: #039be5;
   float: left;
   -webkit-animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
           animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out; 
